<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/headerBar"
        layout="@layout/toolbar">
    </include>


    <RelativeLayout
        android:id="@+id/rlTempContents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#252424"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvHR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp"
            android:text="@string/heart_rate_92_bpm"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvOutdoorTemperature"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="26dp"
            android:layout_marginTop="50dp"
            android:text="@string/outdoor_temperature"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvBodyTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="26dp"
            android:layout_marginTop="80dp"
            android:text="@string/body_temperature"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="26dp"
            android:layout_marginTop="110dp"
            android:text="Humidity: 47%"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btnPower"
            android:layout_width="111dp"
            android:layout_height="111dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:layout_centerInParent="true"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="132dp"
            android:background="@drawable/power_red"
            android:clickable="true"
            android:text="" />

        <SeekBar
            android:id="@+id/sbTempControl"
            android:layout_width="237dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="224dp"
            android:maxHeight="100dip"
            android:minHeight="100dip"
            android:padding="100dp"
            android:thumb="@drawable/sun_thumb" />

        <TextView
            android:id="@+id/tvTemperatureDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="145dp"
            android:layout_marginTop="384dp"
            android:layout_marginBottom="125dp"
            android:text="@string/c"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold|italic"
            tools:visibility="visible" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="23dp"
            android:orientation="horizontal"
            android:padding="20dp">

            <RadioButton
                android:id="@+id/rbSelectCelsius"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:buttonTint="#CCFFFFFF"
                android:checked="true"
                android:paddingEnd="80dp"
                android:text="@string/celsius"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:id="@+id/rbSelectFahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:buttonTint="#CCFFFFFF"
                android:text="@string/fahrenheit"
                android:textColor="#FFFFFF" />
        </RadioGroup>


    </RelativeLayout>
</LinearLayout>